feat: restore deleted expenses
